--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -1,37 +1,8 @@
+{% extends 'base/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Python MSS</title>
-
-    <meta name="description" content="Página do curso Python Pró">
-    <meta name="author" content="Maiara Sacramento">
-	<link rel="shortcut icon" href="{% static 'img/pythocat.png' %}" type="image.png"/>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
-  </head>
-
-  <body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro Mss</a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-      </ul>
-    </div>
-  </div>
- </nav>
-
-    <div class="container">
+{% block title %}Python MSS - Home{% endblock title %}
+{% block body %}
+<div class="container">
 	<div class="row">
 		<div class="col-md-12">
 
@@ -110,23 +81,4 @@
 				</div>
 			</div>
 		</div>
-					<footer class="main-footer main-footer-expand-lg bg-dark mt-5 pt-4 text-light">
-						<h4>Entre em contato</h4>>
-						<address>
-							<br/>
-							+55 71 99168-4751
-							<br/>
-							<a href="mailto:nova.aguiaimperial@gmail.com">nova.aguiaimperial@gmail.com</a>
-						</address>
-
-						<div class="rights rights-expand-lg">
-
-								<div class="col">
-									{% now 'Y' %} Maiara Sacramento. Todos direitos reservados.
-								</div>
-						</div>>
-					</footer>
-	</div>
-	</div>
-  </body>
-</html>
+{% endblock body %}
