--- a/pypro/base/templates/base/base.html
+++ b/pypro/base/templates/base/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
+
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
@@ -20,19 +20,58 @@
 
   <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro Mss</a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro Mss</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      MODULOS
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-      </ul>
-    </div>
-  </div>
- </nav>
+                      {% for modulo in MODULOS %}
+                      <a class="dropdown-item" href="{{modulo.get_absolute_url}}">{{ modulo.titulo }}</a>
+                      {% endfor %}
 
-  {% block body %} {% endblock body %}
-  {% include 'base/footer.html' with contato_email='nova.aguiaimperial@gmail.com' only %}
+                  </div>
+
+              </li>
+
+          </ul>
+      {% if user.is_authenticated %}
+      <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      {{user.first_name}}
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <div class="dropdown-item">
+                        <a class="btn btn-danger" href="{% url 'logout' %}">Sair</a>
+                      </div>
+                  </div>
+
+              </li>
+
+          </ul>
+
+      {% else %}
+      <a class="btn btn-light my-2" href="{% url 'login' %}">Entrar</a>
+      {% endif %}
+      </nav>
+
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+              integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+              crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+              integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+              crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+              integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+              crossorigin="anonymous"></script>
+      {% block body %} {% endblock body %}
+      {% include 'base/footer.html' with contato_email='nova.aguiaimperial@gmail.com' only %}
 
   </body>
 </html>
