--- a/pypro/base/templates/base/footer.html
+++ b/pypro/base/templates/base/footer.html
@@ -1,14 +1,14 @@
 <footer class="main-footer main-footer-expand-lg bg-dark mt-5 pt-4 text-light">
-	<h4>Entre em contato</h4>
+	<h4>Entre em Contato</h4>
 	<address>
 		<br/>
-		+55 71 99168-4751
+		+55 71 XXXX-4751
 		<br/>
 		<a href="mailto:{{contato_email}}">{{contato_email}}</a>
 	</address>
 	<div class="rights rights-expand-lg">
 		<div class="col">
-			{% now 'Y' %} Maiara Sacramento. Todos direitos reservados.
+			{% now 'Y' %} Maiara Sacramento - Todos direitos reservados.
 		</div>
 	</div>
 </footer>
