--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -8,7 +8,7 @@
 
 			<h2>
 				<br/>
-				Aprendendo Django PyPro
+				Projeto inicial Para Curso de Monitoria
 				<br/><br/>
 			</h2>
 			<!-- Begin Mailchimp Signup Form -->
@@ -55,7 +55,9 @@
 <!--End mc_embed_signup-->
 			<p>
 				<br/>
-				Um texto sobre o curso aqui.
+				<h4 class="card-header">
+				Irá apresentar neste projeto vídeos do Programa de Monitoria Mais Estudo Bahia.
+			    </h4>
 				<br/>
 			</p>
 
@@ -63,17 +65,18 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="card">
-					<h5 class="card-header">
+					<h4 class="card-header">
 						Mais Detalhes sobre o curso
-					</h5>
+					</h4>
 					<div class="card-body">
 						<p class="card-text">
 
-							<img src="{% static 'img/pythocat.png' %}" width=300 height=200 class="img-thumbnail float-left mr-6" />
-							Aqui será apresentado uma bibliografia, entretanto neste momento o
-							a imagem não está aparecendo.
-							O que precisaremos fazer?
-							É o mesmo que ocorreu com o favicon?
+							<img src="{% static 'img/pythocat.png' %}" width=600 height=400 class="img-thumbnail float-left mr-6" />
+							<h5 class="card-header">
+							Maiara Sacramento, formada em Analise e Desenvolvimeno de Sistemas, pós graduada em Administrador de Banco de Dados - DBA e business intelligence - BI.
+							<br><br> Estudante de Python e Django.
+							</h5>
+
 							<br/>
 						</p>
 					</div>
